Added documentation about the 'PermGen space' error.